--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,10 @@
 #MySQL Options
 db.password=password
-db.username=root
+db.username=mgsdb_user
 db.url=jdbc:mysql://localhost/mgsdb
 db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 db.driver=com.mysql.jdbc.Driver
+db.hibernatedialect=hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 
  
 
