--- a/meme_gen_server/pom.xml
+++ b/meme_gen_server/pom.xml
@@ -33,6 +33,18 @@
           <artifactId>jackson-mapper-asl</artifactId>
           <version>1.9.9</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.9</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -40,6 +52,12 @@
 			<version>4.0.0.GA</version>
 			<scope>compile</scope>
 		</dependency>
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.5.6-Final</version>
+        </dependency>
 
 		<!-- JPA Persistence Dependencies -->
 
