--- a/meme_gen_server/src/main/resources/db.properties
+++ b/meme_gen_server/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 #MySQL Options
 db.password=password
 db.username=mgsdb_user
-db.url=jdbc:mysql://localhost/mgsdb
+db.url=jdbc\:mysql\://localhost
 db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 db.driver=com.mysql.jdbc.Driver
 db.hibernatedialect=hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
