--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".CreateMemeActivity"
+            android:name="com.eastapps.meme_gen_android.CreateMemeActivity"
             android:label="@string/title_activity_create_meme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.eastapps.meme_gen_android.ViewMeme"
+            android:name="com.eastapps.meme_gen_android.ViewMemeActivity"
             android:label="@string/title_activity_view_meme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
