--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity><!--
         <activity
             android:name="com.eastapps.meme_gen_android.ViewMemeActivity"
             android:label="@string/title_activity_view_meme" >
@@ -29,7 +29,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>-->
     </application>
 
 </manifest>
