--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.eastapps.meme_gen_android.CreateMemeActivity"
+            android:name="com.eastapps.meme_gen_android.activity.CreateMemeActivity"
             android:label="@string/title_activity_create_meme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
