--- a/meme_gen_server/pom.xml
+++ b/meme_gen_server/pom.xml
@@ -116,6 +116,12 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+        
+        <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-aspects</artifactId>
+    <version>3.0.5.RELEASE</version>
+</dependency>
 
 		<!-- DB Dependencies -->
 
