--- a/meme_gen_android/bin/AndroidManifest.xml
+++ b/meme_gen_android/bin/AndroidManifest.xml
@@ -9,13 +9,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MemeGenApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        android:name=".MemeGenApplication">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.CreateMemeActivity"
             android:label="@string/title_activity_create_meme" >
@@ -32,11 +34,13 @@
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.default_searchable"
-                android:value=".activity.MemeTypeSearchResultsActivity"/>
+                android:value=".activity.MemeTypeSearchResultsActivity" />
         </activity>
         <activity
             android:name=".activity.MemeTypeSearchResultsActivity"
@@ -45,6 +49,7 @@
             android:theme="@style/AppTheme" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
@@ -52,16 +57,14 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-    </application>
 
-    <!--
-    <activity android:name=".SearchableActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
-        </intent-filter>
-        <meta-data android:name="android.app.searchable"
-                   android:resource="@xml/searchable"/>
-    </activity>
-    -->
+        <meta-data
+            android:name="com.mobclix.APPLICATION_ID"
+            android:value="insert-your-application-key" />
+
+        <activity
+            android:name="com.mobclix.android.sdk.MobclixBrowserActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+    </application>
 
 </manifest>
