--- a/meme_gen_server/pom.xml
+++ b/meme_gen_server/pom.xml
@@ -124,6 +124,11 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.3.27</version>
+        </dependency>
         <!-- View Dependencies -->
         <dependency>
             <groupId>taglibs</groupId>
