--- a/meme_gen_android/bin/AndroidManifest.xml
+++ b/meme_gen_android/bin/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eastapps.meme_gen_android"
     android:versionCode="1"
-    android:versionName="0.1.11" >
+    android:versionName="0.1.12" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -20,7 +20,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.CreateMemeActivity"
-            android:label="@string/title_activity_create_meme" >
+            android:label="@string/title_activity_create_meme" 
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
