--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,12 @@
 *.dex
 *.apk
 
+\.*
+
 meme_web_reader/*.jpg
 meme_gen_android/bin/*
 meme_gen_android/gen/*
 mgs_v1/local.out
 mgs_v1/local.log
 mgs_v1/target/*
+*\.out
