--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <application
         android:name=".MemeGenApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -28,9 +27,11 @@
         </activity>
         <activity
             android:name=".activity.ViewMemeTypeListActivity"
-            android:label="@string/title_activity_meme_list"
+        android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
             android:launchMode="standard"
             android:theme="@style/AppTheme" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
