--- a/meme_gen_android/AndroidManifest.xml
+++ b/meme_gen_android/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eastapps.meme_gen_android"
     android:versionCode="1"
-    android:versionName="0.1.12" >
+    android:versionName="0.1.14" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -16,7 +16,9 @@
         android:name=".MemeGenApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:icon="@drawable/ic_launcher" >
+        
         <activity
             android:name=".activity.CreateMemeActivity"
             android:label="@string/title_activity_create_meme" 
@@ -27,8 +29,6 @@
         </activity>
         <activity
             android:name=".activity.ViewMemeTypeListActivity"
-        android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
             android:launchMode="standard"
             android:theme="@style/AppTheme" >
             
